[gd_scene load_steps=16 format=3 uid="uid://ll5qosfnpld3"]

[ext_resource type="Texture2D" uid="uid://b7y85vdrbga1v" path="res://Assets/animalsprites/mole.png" id="1_4lhwc"]
[ext_resource type="Texture2D" uid="uid://by6ojocygd2dp" path="res://Assets/layout/frony_layout.png" id="1_7rr3c"]
[ext_resource type="Script" uid="uid://bd4ibh4fabtci" path="res://scripts/main_layout.gd" id="1_cq4yi"]
[ext_resource type="Texture2D" uid="uid://dglk6ld2wbfv1" path="res://Assets/layout/bg_layout.jpg" id="2_l5l47"]
[ext_resource type="Texture2D" uid="uid://co4verei2hgtj" path="res://Assets/interactable/catalog_1.png" id="2_vjpme"]
[ext_resource type="Texture2D" uid="uid://svr384p4hlgd" path="res://Assets/interactable/catalog_2.png" id="3_4jnhx"]
[ext_resource type="Texture2D" uid="uid://cemoejxtwyj6t" path="res://Assets/interactable/catalog.png" id="4_4jnhx"]
[ext_resource type="Script" uid="uid://bbqlr045k8se6" path="res://scripts/catalogue.gd" id="5_f6vs1"]
[ext_resource type="PackedScene" uid="uid://drbjmsweeri05" path="res://scenes/currency.tscn" id="6_urhyu"]
[ext_resource type="PackedScene" uid="uid://boepidkh0v6vi" path="res://scenes/pc_ui.tscn" id="8_4m2lt"]
[ext_resource type="AudioStream" uid="uid://c64bqfrfk2g4e" path="res://Assets/sad.mp3" id="11_6flo5"]

[sub_resource type="Animation" id="Animation_tnbgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimalSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimalSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6flo5"]
resource_name = "customer_leave"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimalSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 540), Vector2(550, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimalSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_urhyu"]
resource_name = "customer_new"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimalSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(552, 540), Vector2(960, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimalSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7l78i"]
_data = {
&"RESET": SubResource("Animation_tnbgg"),
&"customer_leave": SubResource("Animation_6flo5"),
&"customer_new": SubResource("Animation_urhyu")
}

[node name="main_layout" type="Node2D"]
script = ExtResource("1_cq4yi")
COMMISSION_PERCENTAGE = 0.3

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_l5l47")

[node name="AnimalSprite" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_4lhwc")

[node name="MainUI" parent="." instance=ExtResource("8_4m2lt")]
offset_left = 1088.0
offset_top = 139.0
offset_right = 1782.0
offset_bottom = 816.0

[node name="FronyLayout" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_7rr3c")

[node name="currency" parent="." instance=ExtResource("6_urhyu")]
offset_left = 1726.0
offset_top = 118.0
offset_right = 1726.0
offset_bottom = 118.0

[node name="catalogue" type="TextureButton" parent="."]
z_index = 1
offset_top = 687.0
offset_right = 524.0
offset_bottom = 1081.0
texture_normal = ExtResource("2_vjpme")
texture_hover = ExtResource("3_4jnhx")
script = ExtResource("5_f6vs1")

[node name="openCatalogue" type="Sprite2D" parent="catalogue"]
visible = false
z_index = 6
position = Vector2(1016, -166)
texture = ExtResource("4_4jnhx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7l78i")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_6flo5")
volume_db = -30.0
autoplay = true
parameters/looping = true

[connection signal="money_sent" from="MainUI" to="." method="_on_main_ui_money_sent"]
